# rat

./: Cargo.toml  build.rs  test.txt
src/: cat.rs  config.rs  input.rs  main.rs
