[package]
name = "rat"
version = "0.1.0"
authors = ["Stuart Reilly <stu@reilly-family.co.uk>"]
build = "build.rs"
publish = false
description = "Rust implmentation of cat. Concatonate files and print to standard output."

[dependencies]
clap = "2"
regex = "0.2"
lazy_static = "0.2"

[build-dependencies]
clap = "2"
